teste/webtest-spot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtest-spot
  labels:
    app: webtest-spot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtest-spot
  template:
    metadata:
      labels:
        app: webtest-spot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: karpenter.sh/capacity-type
                    operator: In
                    values:
                      - on-demand
      containers:
        - name: httpd
          image: httpd
          resources:
            requests:
              cpu: "70m"
              memory: "70Mi"
            limits:
              cpu: "70m"
              memory: "70Mi"
